@@ -532,6 +532,16 @@ class PanoramaConf
         if( $this->securityProfilebaseroot !== null )
         {
             //
+            // custom URL category extraction
+            //
+            $tmproot = DH::findFirstElement('custom-url-category', $this->securityProfilebaseroot);
+            if( $tmproot !== FALSE )
+            {
+                $this->customURLProfileStore->load_from_domxml($tmproot);
+                #$this->urlStore->load_from_domxml($tmproot);
+            }
+
+            //
             // URL Profile extraction
             //
             $tmproot = DH::findFirstElement('url-filtering', $this->securityProfilebaseroot);
@@ -540,16 +550,6 @@ class PanoramaConf
                 #$tmprulesroot = DH::findFirstElement('rules', $tmproot);
                 #if( $tmprulesroot !== FALSE )
                 $this->URLProfileStore->load_from_domxml($tmproot);
-            }
-
-            //
-            // Nat Rules extraction
-            //
-            $tmproot = DH::findFirstElement('custom-url-category', $this->securityProfilebaseroot);
-            if( $tmproot !== FALSE )
-            {
-                $this->customURLProfileStore->load_from_domxml($tmproot);
-                #$this->urlStore->load_from_domxml($tmproot);
             }
 
             //
