@@ -20,6 +20,7 @@ BUGFIX:
 * class SecurityRule | bugfix to correctly cleanup XML node 'profile-setting', if no SecurityProfile/SecurityProfileGroup is set
 * type=rule | bugfix for API_showRuleHitCount
 * type=rule | bugfix for actions=rule-hit-count-show / -clear
+* type=securityprofile securityprofiletype=custom-url-category 'filter=(object is.unused)' - bugfix to add reference
 
 GENERAL:
 * cleanup alias.sh - remove deprecated util scripts which are directly supported with alias "pan-os-php type=XYZ"
